--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,7 @@
 
         <ul>
           <li><a class="buttons" href="{{ site.github.api_url }}">API Reference</a></li>
-          <li><a class="buttons" href="{{ site.github.nmp_url }}">Visit NMP</a></li>
+          <li><a class="buttons" href="{{ site.github.npm_url }}">Visit NMP</a></li>
           {% if site.show_downloads %}
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
