--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,8 +20,12 @@
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-          <li><a class="buttons github" href="{{ site.github.api_url }}">API Reference</a></li>
-          <li><a class="buttons github" href="{{ site.github.npm_url }}">View On NPM</a></li>
+          <li><a class="buttons none" href="{{ site.github.hw_url }}">Hardware</a></li>
+          <li><a class="buttons none" href="{{ site.github.api_url }}">API Reference</a></li>
+          <li><a class="buttons none" href="{{ site.github.npm_url }}">View On NPM</a></li>
+        </ul>
+        <hr/>
+        <ul>
           {% if site.show_downloads %}
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
