--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
 {% seo %}
     <link href='https://fonts.googleapis.com/css?family=Arvo:400,700,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <link rel="stylesheet" href="/css/hazyair.css">
+    <link rel="stylesheet" href="/hazyair/css/hazyair.css">
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
