--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -19,14 +19,14 @@
   </head>
   <body>
     <div class="wrapper">
-      <header>
+      <header style="width: 250px">
         <h1 class="header">{{ site.title | default: site.github.repository_name }}</h1>
         <p class="header">{{ site.description | default: site.github.project_tagline }}</p>
 
         <ul>
-          <li><a class="buttons none" href="{{ site.github.hw_url }}">Hardware</a></li>
-          <li><a class="buttons none" href="{{ site.github.api_url }}">API Reference</a></li>
-          <li><a class="buttons none" href="{{ site.github.npm_url }}">View On NPM</a></li>
+          <li><a class="buttons none menu" href="{{ site.github.hw_url }}">Hardware</a></li>
+          <li><a class="buttons none menu" href="{{ site.github.api_url }}">API Reference</a></li>
+          <li><a class="buttons none menu" href="{{ site.github.npm_url }}">View On NPM</a></li>
         </ul>
         <hr/>
         <ul>
@@ -34,7 +34,7 @@
             <li class="download"><a class="buttons" href="{{ site.github.zip_url }}">Download ZIP</a></li>
             <li class="download"><a class="buttons" href="{{ site.github.tar_url }}">Download TAR</a></li>
           {% endif %}
-          <li><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></li>
+          <li><a class="buttons github menu" href="{{ site.github.repository_url }}">View On GitHub</a></li>
         </ul>
 
         {% if site.github.is_project_page %}
