--- a/docs/hazyair.css
+++ b/docs/hazyair.css
@@ -1,7 +1,7 @@
 body {
     padding: 0px;
     overflow-x: hidden;
-    background-color: black;
+    background-color: #1e2327;
 }
 
 .hazyair-style {
