--- a/docs/hazyair.css
+++ b/docs/hazyair.css
@@ -10,25 +10,83 @@ body {
     font-style: italic;
 }
 
-.hazyair-wrap {
-    width: 360px;
-    height: 208;
-    padding: 0;
-    overflow: hidden;
+@media width and (min-width: 360px) {
+
+    .hazyair-wrap {
+        width: 360px;
+        height: 208px;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    .hazyair-frame {
+        width: 450px;
+        height: 260px;
+        border: 0;
+        -ms-transform: scale(0.8);
+        -moz-transform: scale(0.8);
+        -o-transform: scale(0.8);
+        -webkit-transform: scale(0.8);
+        transform: scale(0.8);
+        -ms-transform-origin: 0 0;
+        -moz-transform-origin: 0 0;
+        -o-transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0;
+    }
+
 }
 
-.hazyair-frame {
-    width: 450px;
-    height: 260px;
-    border: 0;
-    -ms-transform: scale(0.8);
-    -moz-transform: scale(0.8);
-    -o-transform: scale(0.8);
-    -webkit-transform: scale(0.8);
-    transform: scale(0.8);
-    -ms-transform-origin: 0 0;
-    -moz-transform-origin: 0 0;
-    -o-transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
-    transform-origin: 0 0;
+@media width and (min-width: 450px) {
+
+    .hazyair-wrap {
+        width: 450px;
+        height: 260px;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    .hazyair-frame {
+        width: 450px;
+        height: 260px;
+        border: 0;
+        -ms-transform: scale(1);
+        -moz-transform: scale(1);
+        -o-transform: scale(1);
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -ms-transform-origin: 0 0;
+        -moz-transform-origin: 0 0;
+        -o-transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0;
+    }
+
+}
+
+@media width and (min-width: 540px) {
+
+    .hazyair-wrap {
+        width: 540px;
+        height: 312px;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    .hazyair-frame {
+        width: 450px;
+        height: 260px;
+        border: 0;
+        -ms-transform: scale(1.2);
+        -moz-transform: scale(1.2);
+        -o-transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+        -ms-transform-origin: 0 0;
+        -moz-transform-origin: 0 0;
+        -o-transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0;
+    }
+
 }
