--- a/docs/hazyair.css
+++ b/docs/hazyair.css
@@ -20,8 +20,8 @@ body {
     }
 
     .hazyair-frame {
-        width: 450px;
-        height: 260px;
+        width: 100%;
+        height: 100%;
         border: 0;
         -ms-transform: scale(0.8);
         -moz-transform: scale(0.8);
@@ -47,8 +47,8 @@ body {
     }
 
     .hazyair-frame {
-        width: 450px;
-        height: 260px;
+        width: 100%;
+        height: 100%;
         border: 0;
         -ms-transform: scale(1);
         -moz-transform: scale(1);
@@ -67,15 +67,15 @@ body {
 @media (min-width: 540px) {
 
     .hazyair-wrap {
-        width: 540vw;
-        height: 312vw;
+        width: 540px;
+        height: 312px;
         padding: 0;
         overflow: hidden;
     }
 
     .hazyair-frame {
-        width: 450px;
-        height: 260px;
+        width: 100%;
+        height: 100%;
         border: 0;
         -ms-transform: scale(1.2);
         -moz-transform: scale(1.2);
