--- a/docs/hazyair.css
+++ b/docs/hazyair.css
@@ -17,6 +17,7 @@ body {
         height: 208px;
         padding: 0;
         overflow: hidden;
+        padding-bottom: 100px;
     }
 
     .hazyair-frame {
