--- a/docs/hazyair.css
+++ b/docs/hazyair.css
@@ -24,8 +24,8 @@ body {
     }
 
     .hazyair-frame {
-        width: 100%;
-        height: 100%;
+        width: 450px;
+        height: 260px;
         border: 0;
         -ms-transform: scale(0.8);
         -moz-transform: scale(0.8);
