--- a/docs/hazyair.css
+++ b/docs/hazyair.css
@@ -176,7 +176,7 @@ body {
 
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 720px) {
 
     .hazyair-wrap {
         width: 630px;
@@ -194,6 +194,33 @@ body {
         -o-transform: scale(1.4);
         -webkit-transform: scale(1.4);
         transform: scale(1.4);
+        -ms-transform-origin: 0 0;
+        -moz-transform-origin: 0 0;
+        -o-transform-origin: 0 0;
+        -webkit-transform-origin: 0 0;
+        transform-origin: 0 0;
+    }
+
+}
+
+@media (min-width: 810px) {
+
+    .hazyair-wrap {
+        width: 720px;
+        height: 416px;
+        padding: 0;
+        overflow: hidden;
+    }
+
+    .hazyair-frame {
+        width: 100%;
+        height: 100%;
+        border: 0;
+        -ms-transform: scale(1.6);
+        -moz-transform: scale(1.6);
+        -o-transform: scale(1.6);
+        -webkit-transform: scale(1.6);
+        transform: scale(1.6);
         -ms-transform-origin: 0 0;
         -moz-transform-origin: 0 0;
         -o-transform-origin: 0 0;
